Issue #3279938: [Entity Browser] select widget overlaps in grid style

--- a/styles/components/entity_browser.scss
+++ b/styles/components/entity_browser.scss
@@ -57,6 +57,18 @@
   }
 }
 
+// Entity list in table views.
+table.entities-list {
+  &:not(.entities-list--single-item) {
+    display: block;
+  }
+
+  td {
+    height: auto;
+    padding: 10px 12px;
+  }
+}
+
 // Entity browser view in overlay
 .gin-entity-browser {
   .entity-browser-form {
